--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,8 +37,9 @@ jobs:
             --slave   /usr/bin/llvm-symbolizer   llvm-symbolizer  /usr/bin/llvm-symbolizer-${LLVM_VERSION} \
             --slave   /usr/bin/llvm-tblgen       llvm-tblgen      /usr/bin/llvm-tblgen-${LLVM_VERSION} \
             --slave   /usr/bin/llvm-objcopy      llvm-objcopy     /usr/bin/llvm-objcopy-${LLVM_VERSION} \
-            --slave   /usr/bin/llvm-strip        llvm-strip       /usr/bin/llvm-strip-${LLVM_VERSION} \
-            --slave   /usr/bin/clang             clang            /usr/bin/clang-${LLVM_VERSION} \
+            --slave   /usr/bin/llvm-strip        llvm-strip       /usr/bin/llvm-strip-${LLVM_VERSION}
+          update-alternatives \
+            --install /usr/bin/clang             clang            /usr/bin/clang-${LLVM_VERSION} 1 \
             --slave   /usr/bin/clang++           clang++          /usr/bin/clang++-${LLVM_VERSION}  \
             --slave   /usr/bin/asan_symbolize    asan_symbolize   /usr/bin/asan_symbolize-${LLVM_VERSION} \
             --slave   /usr/bin/clang-cpp         clang-cpp        /usr/bin/clang-cpp-${LLVM_VERSION}
