--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,15 +5,19 @@ jobs:
   build:
     name: build
     runs-on: ubuntu-latest
+    env:
+      LLVM_VERSION: 13
     steps:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0
       - name: Install dependencies
-        run: sudo apt-get update && sudo apt-get install build-essential flex bison clang-12 llvm-12-dev -y
+        run: |
+          sudo apt-get update && sudo apt-get install build-essential flex bison -y
+          curl -O "https://apt.llvm.org/llvm.sh"
+          chmod +x llvm.sh
+          sudo ./llvm.sh ${LLVM_VERSION}
       - name: set llvm version
-        env:
-          LLVM_VERSION: 12
         run: |
           sudo update-alternatives \
             --install /usr/bin/llvm-config       llvm-config      /usr/bin/llvm-config-${LLVM_VERSION} 1 \
