--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -49,4 +49,6 @@ jobs:
             --install   /usr/bin/clang++         clang++          /usr/bin/clang++-${LLVM_VERSION} 1
       - run: llvm-config --version
       - run: make
+        env:
+          CXX: clang++
       - run: ./bin/ni < examples/test.ni
