Convert bison to cpp (#12)
* Convert bison to cpp

* Check for syntax errors

* Changes to Makefile

* add clang

* Better testing

* Call make test from GH action

* Add smart pointers

* Rename instructions

* Check for macOs

* add entry

* Add -lSystem

* Let clang link object files

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -49,4 +49,6 @@ jobs:
             --install   /usr/bin/clang++         clang++          /usr/bin/clang++-${LLVM_VERSION} 1
       - run: llvm-config --version
       - run: make
-      - run: ./bin/ni < examples/test.ni
+        env:
+          CXX: clang++
+      - run: make test
