--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,14 +7,25 @@ jobs:
     runs-on: ubuntu-latest
     env:
       LLVM_VERSION: 13
-      FORMAT: clang-format-13
     steps:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0
       - name: Install dependencies
         run: |
-          sudo apt-get update && sudo apt-get install build-essential flex bison -y && cd /tmp && wget https://apt.llvm.org/llvm.sh && chmod +x llvm.sh && sudo ./llvm.sh $LLVM_VERSION clang && rm llvm.sh && sudo apt-get install -y clang-format-$LLVM_VERSION
+          sudo apt-get update
+          sudo apt-get install build-essential flex bison -y
+          cd /tmp
+          wget https://apt.llvm.org/llvm.sh
+          chmod +x llvm.sh
+          sudo ./llvm.sh $LLVM_VERSION clang
+          rm llvm.sh
+          sudo apt-get install -y clang-format-$LLVM_VERSION
+          sudo update-alternatives \
+            --install /usr/bin/clang             clang            /usr/bin/clang-${LLVM_VERSION} 1 \
+            --slave   /usr/bin/clang-cpp         clang-cpp        /usr/bin/clang-cpp-${LLVM_VERSION} \
+            --slave   /usr/bin/clang-format      clang-format     /usr/bin/clang-format-${LLVM_VERSION} \
+            --slave   /usr/bin/clang++           clang++          /usr/bin/clang++-${LLVM_VERSION}
       - run: make
       - run: make check-format -e
   ubuntu:
