--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,10 +23,11 @@ jobs:
           sudo apt-get install -y clang-format-$LLVM_VERSION
           sudo update-alternatives \
             --install /usr/bin/clang             clang            /usr/bin/clang-${LLVM_VERSION} 1 \
-            --slave   /usr/bin/clang-cpp         clang-cpp        /usr/bin/clang-cpp-${LLVM_VERSION} \
-            --slave   /usr/bin/clang++           clang++          /usr/bin/clang++-${LLVM_VERSION}
+            --slave   /usr/bin/clang-cpp         clang-cpp        /usr/bin/clang-cpp-${LLVM_VERSION}
           sudo update-alternatives \
-            --install   /usr/bin/clang-format      clang-format     /usr/bin/clang-format-${LLVM_VERSION} 1
+            --install /usr/bin/clang++           clang++          /usr/bin/clang++-${LLVM_VERSION} 1
+          sudo update-alternatives \
+            --install /usr/bin/clang-format      clang-format     /usr/bin/clang-format-${LLVM_VERSION} 1
       - name: Build
         run: |
           mkdir build
@@ -38,6 +39,8 @@ jobs:
   ubuntu:
     name: ubuntu
     runs-on: ubuntu-latest
+    env:
+      LLVM_VERSION: 13
     steps:
       - uses: actions/checkout@v2
         with:
@@ -54,10 +57,11 @@ jobs:
           sudo apt-get install -y clang-format-$LLVM_VERSION
           sudo update-alternatives \
             --install /usr/bin/clang             clang            /usr/bin/clang-${LLVM_VERSION} 1 \
-            --slave   /usr/bin/clang-cpp         clang-cpp        /usr/bin/clang-cpp-${LLVM_VERSION} \
-            --slave   /usr/bin/clang++           clang++          /usr/bin/clang++-${LLVM_VERSION}
+            --slave   /usr/bin/clang-cpp         clang-cpp        /usr/bin/clang-cpp-${LLVM_VERSION}
           sudo update-alternatives \
-            --install   /usr/bin/clang-format      clang-format     /usr/bin/clang-format-${LLVM_VERSION} 1
+            --install /usr/bin/clang++           clang++          /usr/bin/clang++-${LLVM_VERSION} 1
+          sudo update-alternatives \
+            --install /usr/bin/clang-format      clang-format     /usr/bin/clang-format-${LLVM_VERSION} 1
       - name: Build
         run: |
           mkdir build
