--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,13 +28,12 @@ jobs:
             --install /usr/bin/clang++           clang++          /usr/bin/clang++-${LLVM_VERSION} 1
           sudo update-alternatives \
             --install /usr/bin/clang-format      clang-format     /usr/bin/clang-format-${LLVM_VERSION} 1
-          sudo update-alternatives --query clang-format
-      - name: Build
+          sudo update-alternatives --set clang-format /usr/bin/clang-format-${LLVM_VERSION}
+      - name: CMake
         run: |
           mkdir build
           cd build
           cmake ..
-          make
       - name: Check
         run: cd build && make check-format
   ubuntu:
