--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,28 +7,69 @@ jobs:
     runs-on: ubuntu-latest
     env:
       LLVM_VERSION: 13
-      FORMAT: clang-format-13
     steps:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0
       - name: Install dependencies
         run: |
-          sudo apt-get update && sudo apt-get install build-essential flex bison -y && cd /tmp && wget https://apt.llvm.org/llvm.sh && chmod +x llvm.sh && sudo ./llvm.sh $LLVM_VERSION clang && rm llvm.sh && sudo apt-get install -y clang-format-$LLVM_VERSION
-      - run: make
-      - run: make check-format -e
+          sudo apt-get update
+          sudo apt-get install build-essential flex bison -y
+          cd /tmp
+          wget https://apt.llvm.org/llvm.sh
+          chmod +x llvm.sh
+          sudo ./llvm.sh $LLVM_VERSION clang
+          rm llvm.sh
+          sudo apt-get install -y clang-format-$LLVM_VERSION
+          sudo update-alternatives \
+            --install /usr/bin/clang             clang            /usr/bin/clang-${LLVM_VERSION} 1 \
+            --slave   /usr/bin/clang-cpp         clang-cpp        /usr/bin/clang-cpp-${LLVM_VERSION}
+          sudo update-alternatives \
+            --install /usr/bin/clang++           clang++          /usr/bin/clang++-${LLVM_VERSION} 1
+          sudo update-alternatives \
+            --install /usr/bin/clang-format      clang-format     /usr/bin/clang-format-${LLVM_VERSION} 1
+          sudo update-alternatives --set clang-format /usr/bin/clang-format-${LLVM_VERSION}
+      - name: CMake
+        run: |
+          mkdir build
+          cd build
+          cmake ..
+      - name: Check
+        run: cd build && make check-format
   ubuntu:
     name: ubuntu
     runs-on: ubuntu-latest
+    env:
+      LLVM_VERSION: 13
     steps:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0
       - name: Install dependencies
         run: |
-          sudo apt-get update && sudo apt-get install build-essential flex bison -y
-      - run: make
-      - run: make test
+          sudo apt-get update
+          sudo apt-get install build-essential flex bison -y
+          cd /tmp
+          wget https://apt.llvm.org/llvm.sh
+          chmod +x llvm.sh
+          sudo ./llvm.sh $LLVM_VERSION clang
+          rm llvm.sh
+          sudo apt-get install -y clang-format-$LLVM_VERSION
+          sudo update-alternatives \
+            --install /usr/bin/clang             clang            /usr/bin/clang-${LLVM_VERSION} 1 \
+            --slave   /usr/bin/clang-cpp         clang-cpp        /usr/bin/clang-cpp-${LLVM_VERSION}
+          sudo update-alternatives \
+            --install /usr/bin/clang++           clang++          /usr/bin/clang++-${LLVM_VERSION} 1
+          sudo update-alternatives \
+            --install /usr/bin/clang-format      clang-format     /usr/bin/clang-format-${LLVM_VERSION} 1
+      - name: Build
+        run: |
+          mkdir build
+          cd build
+          cmake ..
+          make
+      - name: Test
+        run: ./scripts/test.sh
   mac:
     name: mac
     runs-on: macos-latest
@@ -42,5 +83,11 @@ jobs:
           brew install bison flex
           echo "/usr/local/opt/flex/bin" >> $GITHUB_PATH
           echo "/usr/local/opt/bison/bin" >> $GITHUB_PATH
-      - run: make
-      - run: make test
+      - name: Build
+        run: |
+          mkdir build
+          cd build
+          cmake ..
+          make
+      - name: Test
+        run: ./scripts/test.sh
