--- a/.github/workflows/clangformat.yml
+++ b/.github/workflows/clangformat.yml
@@ -1,9 +1,9 @@
-name: build
+name: clang-format
 on: push
 
 jobs:
-  ubuntu:
-    name: ubuntu
+  format:
+    name: check format
     runs-on: ubuntu-latest
     env:
       LLVM_VERSION: 13
@@ -28,32 +28,11 @@ jobs:
             --install /usr/bin/clang++           clang++          /usr/bin/clang++-${LLVM_VERSION} 1
           sudo update-alternatives \
             --install /usr/bin/clang-format      clang-format     /usr/bin/clang-format-${LLVM_VERSION} 1
-      - name: Build
+          sudo update-alternatives --set clang-format /usr/bin/clang-format-${LLVM_VERSION}
+      - name: CMake
         run: |
           mkdir build
           cd build
           cmake ..
-          make
-      - name: Test
-        run: ./scripts/test.sh
-  mac:
-    name: mac
-    runs-on: macos-latest
-    steps:
-      - uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
-      - name: Install dependencies
-        run: |
-          /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/master/install.sh)"
-          brew install bison flex
-          echo "/usr/local/opt/flex/bin" >> $GITHUB_PATH
-          echo "/usr/local/opt/bison/bin" >> $GITHUB_PATH
-      - name: Build
-        run: |
-          mkdir build
-          cd build
-          cmake ..
-          make
-      - name: Test
-        run: ./scripts/test.sh
+      - name: Check
+        run: cd build && make check-format
