--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,7 +20,11 @@ jobs:
           mkdir build
           cd build
           cmake ..
-          make
+          cmake --build .
+      - name: Unit Test
+        run: |
+          cd build
+          ctest
       - name: Test
         run: ./scripts/test.sh
   mac:
@@ -32,7 +36,7 @@ jobs:
           fetch-depth: 0
       - name: Install dependencies
         run: |
-          /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/master/install.sh)"
+          brew update
           brew install bison flex
           echo "/usr/local/opt/flex/bin" >> $GITHUB_PATH
           echo "/usr/local/opt/bison/bin" >> $GITHUB_PATH
@@ -41,6 +45,10 @@ jobs:
           mkdir build
           cd build
           cmake ..
-          make
+          cmake --build .
+      - name: Unit Test
+        run: |
+          cd build
+          ctest
       - name: Test
         run: ./scripts/test.sh
