--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Unit Test
         run: |
           cd build
-          ctest
+          ctest --output-on-failure
       - name: Test
         run: ./scripts/test.sh
   mac:
@@ -49,6 +49,6 @@ jobs:
       - name: Unit Test
         run: |
           cd build
-          ctest
+          ctest --output-on-failure
       - name: Test
         run: ./scripts/test.sh
