--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,24 @@
 cmake_minimum_required(VERSION 3.0.0)
 project(ni VERSION 0.0.1 LANGUAGES CXX)
 
-set(CMAKE_CXX_CLANG_TIDY clang-tidy)
+find_program(CLANG_TIDY_EXECUTABLE clang-tidy)
+IF(CLANG_TIDY_EXECUTABLE)
+    EXECUTE_PROCESS(COMMAND ${CLANG_TIDY_EXECUTABLE} --version
+        OUTPUT_VARIABLE CLANG_TIDY_version_output
+        ERROR_VARIABLE CLANG_TIDY_version_error
+        RESULT_VARIABLE CLANG_TIDY_version_result
+        OUTPUT_STRIP_TRAILING_WHITESPACE)
+
+    IF(NOT ${CLANG_TIDY_version_result} EQUAL 0)
+        MESSAGE(SEND_ERROR "Command \"${CLANG_TIDY_EXECUTABLE} --version\" failed with output:\n${CLANG_TIDY_version_error}")
+    ELSE()
+        IF("${CLANG_TIDY_version_output}" MATCHES "version (.*)")
+            SET(CLANG_TIDY_VERSION "${CMAKE_MATCH_1}")
+        ENDIF()
+        MESSAGE(NOTICE "-- Found CLANG_TIDY: ${CLANG_TIDY_EXECUTABLE} (found version \"${CLANG_TIDY_VERSION}\")")
+    ENDIF()
+    set(CMAKE_CXX_CLANG_TIDY ${CLANG_TIDY_EXECUTABLE})
+ENDIF(CLANG_TIDY_EXECUTABLE)
 
 find_package(FLEX REQUIRED)
 find_package(BISON REQUIRED)
@@ -46,7 +63,7 @@ IF(CLANG_FORMAT_EXECUTABLE)
         OUTPUT_STRIP_TRAILING_WHITESPACE)
 
     IF(NOT ${CLANG_FORMAT_version_result} EQUAL 0)
-        MESSAGE(SEND_ERROR "Command \"${CLANG_FORMAT_PATH} --version\" failed with output:\n${CLANG_FORMAT_version_error}")
+        MESSAGE(SEND_ERROR "Command \"${CLANG_FORMAT_EXECUTABLE} --version\" failed with output:\n${CLANG_FORMAT_version_error}")
     ELSE()
         IF("${CLANG_FORMAT_version_output}" MATCHES "version (.*)")
             SET(CLANG_FORMAT_VERSION "${CMAKE_MATCH_1}")
