Visitor pattern for codegen

--- a/.github/workflows/clangformat.yml
+++ b/.github/workflows/clangformat.yml
@@ -35,4 +35,4 @@ jobs:
           cd build
           cmake ..
       - name: Check
-        run: cd build && make check-format
+        run: cmake --build build --target check-format
