--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,8 +5,6 @@ jobs:
   ubuntu:
     name: ubuntu
     runs-on: ubuntu-latest
-    env:
-      LLVM_VERSION: 13
     steps:
       - uses: actions/checkout@v2
         with:
@@ -14,7 +12,7 @@ jobs:
       - name: Install dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install build-essential flex bison -y
+          sudo apt-get install build-essential flex bison cmake -y
       - name: Build
         run: |
           mkdir build
