--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -4,7 +4,7 @@ repository:
   name: ni
   description: ni programming language
   homepage: https://github.com/fmenezes/ni
-  private: false
+  private: true
   has_issues: true
   has_projects: false
   has_wiki: false
