--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -20,7 +20,7 @@ collaborators:
   - username: vinperdom
     permission: push
 branches:
-  - name: master
+  - name: main
     protection:
       required_status_checks:
         strict: true
